--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//WebRoot/js/validate/jquery.validationEngine-zh_CN.js=UTF-8
+encoding//WebRoot/twcn.sql=UTF-8
