完成推特发送（不带图）

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebRoot/js/uploadify/jquery.uploadify.js=UTF-8
+encoding//WebRoot/js/uploadify/uploadify.swf=UTF-8
 encoding//WebRoot/js/validate/jquery.validationEngine-zh_CN.js=UTF-8
 encoding//WebRoot/twcn.sql=UTF-8
